crates/plotnik-lib/tests/02-parser/recovery_unexpected/bare_colon_inside_node.txt
(a : (b))
------------------ DIAGNOSTICS -------------------
error: expected a child node, or `)` to close
 --> query.ptk:1:4
  |
1 | (a : (b))
  |    ^
